--- a/Prototype2.0/Prototype2.0/main.resx
+++ b/Prototype2.0/Prototype2.0/main.resx
@@ -121,7 +121,7 @@
   <data name="button_jiantixitong.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABHNCSVQICAgIfAhkiAAAAAFzUkdCAK7O
-        HOkAAAAEZ0FNQQAAsY8L/GEFAAAACXBIWXMAAAsOAAALDgFAvuFBAAAAHHRFWHRTb2Z0d2FyZQBBZG9i
+        HOkAAAAEZ0FNQQAAsY8L/GEFAAAACXBIWXMAAAsMAAALDAE/QCLIAAAAHHRFWHRTb2Z0d2FyZQBBZG9i
         ZSBGaXJld29ya3MgQ1M1cbXjNgAAABZ0RVh0Q3JlYXRpb24gVGltZQAxMi8yOS8xMSw86+oAAAFxSURB
         VFhHxVYLDcIwEJ2ESZgEkhlAAhKQMAmTMAlIQMIkTAIScAD3kis05bqur90guUBC773ru1+bpuDT9/0V
         VgBR5irkd1gZCuktxK3YS60lYXg3ld8FcHwaJIDZU2Dmr0J4CnHnkTsVOgKKcxHywQhg4NAILyFfjAAW
@@ -163,6 +163,34 @@
         mfoXtbs9oiHCD4ZBcSgFE4MCmL6oSoyg2hb6TgyjntSuhjLVpx7ASJb8UQaMP8oB44dyxNhRDTDHUQ0x
         glr4G1W7rwNGUPz/K6M6YjAqAKOjAjFr1Akw3ygCyeVKBiL7Wd15+bLVDFe15T9fGiCUsn/M0GPrpM27
         lseK9YcSshpHAUvHfkb1BaEVogWh+bszhAIO0MiQtQas80dRazX4BmeS03cXdiFDAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="button_settings.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACQAAAAkCAYAAADhAJiYAAAABHNCSVQICAgIfAhkiAAAAAFzUkdCAK7O
+        HOkAAAAEZ0FNQQAAsY8L/GEFAAAACXBIWXMAAAsPAAALDwGS+QOlAAAAHHRFWHRTb2Z0d2FyZQBBZG9i
+        ZSBGaXJld29ya3MgQ1M1cbXjNgAAABZ0RVh0Q3JlYXRpb24gVGltZQAxMi8yOS8xMSw86+oAAAH9SURB
+        VFhH1VaLjYMwDO0IjFKJBRiFEToCIzACIzACI3SUbnD1o84pBNtxwsHdVYra4t+LP8/cbgc+bdvOdL6S
+        Mx9wWW9KIHoBTADX13uutCQwgwFoqHSrm1Gwhk5H5y5p1QCCL/bZFAFmw1eUgTF1UAqI9MfIH3yLF90B
+        FcCEvpigzJlD/zyNkkEGnTUT9D0JunlQHCzOTDpBC+lY8lQfurBJn4f/kOvl4/pqxmc979R+4nKdFVjz
+        a/dS0nxng9sNi5gtpQklcGBq8BHoAQe/JfaWbNchcX8yzYgpUlPNpbemcHEDiUZbmyb3zYxM29MlkJ62
+        p55FN/twkJap3pouAED9w9Gc7MrE5Ql2mlzqIcSIY34AZnoldjQ7M7m7eUGjLwDkHe1HDCjDWZtMke7D
+        G6cEUJcAQrq1ywyJLijBdfF/Deiyklnb+Pqm5kn7O2MvkRM14O8So8AvjfEidv3qcBDm5ct1cvIGXjXA
+        R+AZHPzGMw/n+DJNzkanQ0/QnM5oLuvMOsg5r5XvFvI3SE57reNau81K2mSMAFnThYAg0VdBSaFrES/k
+        jadsUtC1CRk0eAqTpmUFMuiswehbGhLE0MslvFrEoHbNxxPl2vYMKh4WP5gAjDOBURZvUQqIQd25T+0y
+        mTVUhDWAauK4bYx9hzL2bkc/qaiw8nwkxhvvd2apw5HTFQAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="button_exit.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABsAAAAbCAYAAACN1PRVAAAABHNCSVQICAgIfAhkiAAAAAFzUkdCAK7O
+        HOkAAAAEZ0FNQQAAsY8L/GEFAAAACXBIWXMAAAsPAAALDwGS+QOlAAAAHHRFWHRTb2Z0d2FyZQBBZG9i
+        ZSBGaXJld29ya3MgQ1M1cbXjNgAAABZ0RVh0Q3JlYXRpb24gVGltZQAxMi8yOS8xMSw86+oAAAEGSURB
+        VEhLzZbbDcMwCEU9gnfJIh3Bo2aEjtINXF/XoDR+BPxIGwkpH4FjCOBrzIJn2zZLYb33hoxR+CDYHswH
+        ewV7aM8Bn+SLGIhlM1gCPRMIH5I5KTD4uII/YjLQNEBiYAVE/gwEjEp3zOj8Xs3wAkRxdpQTsBakWVIh
+        KMYgGJpBDdSA0DQEK/3YZkmVIMRyEYanw1laCQYxbCEwZpQN9QJg7OAqbCKQR6UJmwD8mslL2AAwG/7/
+        gg2OgryMg6Bsef++9SdllN0WpctTux/71lVHRjiY9nCfRXzQDJLTcqcpgXzFSCBxe5/1iBJob5cFkHAl
+        ZTVf8KQ9WAPOlXL0H5KkWypS326mjTTWXbmgAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="pictureBox2.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -212,7 +240,7 @@
         XTesb3QPLh88M+QwdP6m681Lt7xuXbu94vbgcOjwnZHokdE77DtTd1PuvriXeW/h/sYH6AdFD6UeVjxS
         fNTws+7PbaOWo6fHXMf6Hwc/vj/OGn/2S8Yv7ycKnpCfVEyqTDZPmU2dmnafvvF05dOJZ+nPFmYKf5X+
         tfa5zvMffnP8rX82YnbiBf/Fp99LXsq/PPRq2aueuYC5R69TXy/MF72Rf3P4LeNt37vwd5MLWe+x7ys/
-        6H7o/ujz8cGn1E+f/gUDmPP8usTo0wAAAAlwSFlzAAALEgAACxIB0t1+/AAAAAZiS0dEAP8A/wD/oL2n
+        6H7o/ujz8cGn1E+f/gUDmPP8usTo0wAAAAlwSFlzAAALDgAACw4BQL7hQQAAAAZiS0dEAP8A/wD/oL2n
         kwAAAAd0SU1FB94EDg4zKDr/5swAABj8SURBVHhe7Z27zx/FucetE5IKIaUJlJGwIkFhCiwFCiyBQBAZ
         CQkkeIUEQoAAczMXczHYKG26g84/kC6iSR+dP+CchjpF2lOkjURjK5HPft7s1xqPd3eeuezM/N53isXG
         v7nt7nz2+8wzz8ycuXXr1plxjWdwyH3gk08+ufftt98++9Zbb/3GvQ7tngaI42N0cH3gtdde++2zzz77
