测试和设置窗口部分修改
Signed-off-by: Chang5 <chang2249293078@gmail.com>

--- a/Prototype2.0/Prototype2.0/settings.resx
+++ b/Prototype2.0/Prototype2.0/settings.resx
@@ -121,34 +121,37 @@
   <data name="button3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAB8AAAAkCAYAAABxE+FXAAAABHNCSVQICAgIfAhkiAAAAAFzUkdCAK7O
-        HOkAAAAEZ0FNQQAAsY8L/GEFAAAACXBIWXMAAAsQAAALEAGtI711AAAAHHRFWHRTb2Z0d2FyZQBBZG9i
-        ZSBGaXJld29ya3MgQ1M1cbXjNgAAABZ0RVh0Q3JlYXRpb24gVGltZQAxMi8yOS8xMSw86+oAAAFPSURB
-        VFhH7ZddDYQwDICRgAQkkGAACUhAAhKQgAQknAQkIAEJ52DXXrrksg3WH5LdJUfSF8b6tV3XlqpiPl3X
-        1SAjyAPEJQTf43p9pdI5V3lhoUHhAPI8gYaG4HfDmWIRnMApT3PvkgZI4QfT49CYI+U9G05nmPPwan0M
-        DZDAF6XX3qDFAt+M8O1n4avR89Xi+WyEzxZ4b4T3ajhutMCt97yxwGFvo/YcNk9G+GSBF024op6XO3PK
-        dm19j+o66mM3FoLjBCOtdPh9cqIRwckAabGJiovPeg0cvZf09aTX4rB7iyUzXKqyqT2n0HN7e9TDP40R
-        h/0b4OzR+daww3mXyXYAt4Jk8zcCo9SqWyr9HkmLS3gdo2JzmXDYgxUVLVcD0Ih3b4/gBMSfPO51ysHO
-        1lE/cho0AsekXVi9tOBw326a0axG/+F3naNIT9GwvwDQlPfTMv8iXQAAAABJRU5ErkJggg==
+        HOkAAAAEZ0FNQQAAsY8L/GEFAAAACXBIWXMAAAsPAAALDwGS+QOlAAAAHHRFWHRTb2Z0d2FyZQBBZG9i
+        ZSBGaXJld29ya3MgQ1M1cbXjNgAAABZ0RVh0Q3JlYXRpb24gVGltZQAxMi8yOS8xMSw86+oAAAFQSURB
+        VFhH7ZcBrcJAEES/BCRUAkkNIAEJSEACEpCAhC8BCUhAwndwzJDlQvcW/k5JuJAwySSEa9+jlGyPn2zG
+        cVygG/QXLUH5PtcXdkqYUkptKgCu0T80kvryuLWd2kSSE3QHVhp+AFV+dtBsz4aYJC0HgPcwAme7MVSN
+        It87mNq9oWoU+dHB1B4NVfMx8oODqT0YqkaR7xxM7c5QNYp85WBqV4aqScuZAJiuISZJywEYPFDsYKga
+        Rb51MLVbQ9Uo8q4/uK5X3u+eMwDMne/NXGdUOXcw6qTj8eGORpIzAKnDphkut8yR8+ojyaM+3MfJcgbA
+        9B7OTgkzV559vDaP0ft8pLzP1w5gn187QEs0e9W38vilISZJyXHynOHi2wybp3IczHn+qtSXvOucb+Rc
+        QPkH4dXd6n8ln57hKseLky28uyfKo4W39Cvv0o7ysVwA0JT309UVli8AAAAASUVORK5CYII=
 </value>
   </data>
   <data name="button2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAcCAYAAAAAwr0iAAAABHNCSVQICAgIfAhkiAAAAAFzUkdCAK7O
-        HOkAAAAEZ0FNQQAAsY8L/GEFAAAACXBIWXMAAAsQAAALEAGtI711AAAAHHRFWHRTb2Z0d2FyZQBBZG9i
-        ZSBGaXJld29ya3MgQ1M1cbXjNgAAABZ0RVh0Q3JlYXRpb24gVGltZQAxMi8yOS8xMSw86+oAAADVSURB
-        VEhL7ZbRDYAgDEQZyYSFHMURHcER3ACLUVMVpFeq8QMTPozQe14voc4pH+994EtZRn/MDIAKDddiT+87
-        cg4AqRW1HXggGAOEXwEMSCJqMsDbfjiAiMe9NQD8vBiABDtasyAzcU9X+qG9jhhgoy5BiMRVDrD05yDE
-        4lUAGScg8WqACwQsbgLAIIqBSwVSFcJSspHvDaA50By4ObBOJx89yetYcMudhlCr/fBEZCXMWwANpcYA
-        n7XdLl3kwPjgwminlKhEwr2gBf1rECQ+CQAmBGABsCwEU8s5XfUAAAAASUVORK5CYII=
+        HOkAAAAEZ0FNQQAAsY8L/GEFAAAACXBIWXMAAAsPAAALDwGS+QOlAAAAHHRFWHRTb2Z0d2FyZQBBZG9i
+        ZSBGaXJld29ya3MgQ1M1cbXjNgAAABZ0RVh0Q3JlYXRpb24gVGltZQAxMi8yOS8xMSw86+oAAADfSURB
+        VEhL7ZbRDcIwDEQzUqUs1FEyYkfoCN2g+IQdRSENdhpCP/Kkk6CyfQ/xAa4V7/2Zhh+Po5sALYf8WC28
+        dimQP/+SYF3oLXA+SiDwDRXJ3vuQAXTFvZYDQPbu7qsFaGahHDJfCWYWXrtE5tUCAIcpNQlVOZAdkwBA
+        AaUkoS4HsmcWACiipBKmciC7TQIAhRQUm8sBOpFmAYBihN+aiL3xxWCmwBSYAh8CFNPP8R3QJb2pwF/y
+        CAHTn9LOGfa194Ost+xTpNl47DdQwZoVlrLyeH/o+J6VlbLzuALnXrAsBFNJMdcvAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAaCAYAAADWm14/AAAABHNCSVQICAgIfAhkiAAAAAFzUkdCAK7O
-        HOkAAAAEZ0FNQQAAsY8L/GEFAAAACXBIWXMAAAsQAAALEAGtI711AAAAHHRFWHRTb2Z0d2FyZQBBZG9i
-        ZSBGaXJld29ya3MgQ1M1cbXjNgAAABZ0RVh0Q3JlYXRpb24gVGltZQAxMi8yOS8xMSw86+oAAABaSURB
-        VEhLYzA2Nm4A4v9ouIEBCnDIo6snl9/AgMVysGFIDiDXcKL0jTpgUITAwCZCWGIbpUduCIyWhKNF8WAI
-        gdGScOSWQYPD56Ml4WAoB7C2XkdUq3hAS0IAvClQ5momds0AAAAASUVORK5CYII=
+        HOkAAAAEZ0FNQQAAsY8L/GEFAAAACXBIWXMAAAsPAAALDwGS+QOlAAAAHHRFWHRTb2Z0d2FyZQBBZG9i
+        ZSBGaXJld29ya3MgQ1M1cbXjNgAAABZ0RVh0Q3JlYXRpb24gVGltZQAxMi8yOS8xMSw86+oAAABeSURB
+        VEhL7ZQxCgAgDAP9Uz/Yn6sBF4NuBR0uEChkaIYjLSJyupuzLem2rNKpB6egr//XvMoU+KLAWwgREggG
+        xgaHbssqzRJSgCVEH0ggGBgbHLotqzRLSIHXSxg5ALwpUOaBpIeJAAAAAElFTkSuQmCC
 </value>
   </data>
+  <metadata name="openFileDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
